// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boolean.sql > line 8 1`] = `
[
  "SELECT 1 AS one",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "one",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 66 1`] = `
[
  "SELECT pg_input_is_valid('true', 'bool')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "true",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "bool",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 74 1`] = `
[
  "SELECT bool 't' and bool 'f' AS false",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "false",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 12,
                                "sval": {
                                  "sval": "t",
                                },
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": 7,
                              "names": [
                                {
                                  "String": {
                                    "sval": "bool",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 25,
                                "sval": {
                                  "sval": "f",
                                },
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": 20,
                              "names": [
                                {
                                  "String": {
                                    "sval": "bool",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "boolop": "AND_EXPR",
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 76 1`] = `
[
  "SELECT not bool 'f' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 16,
                                "sval": {
                                  "sval": "f",
                                },
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": 11,
                              "names": [
                                {
                                  "String": {
                                    "sval": "bool",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "boolop": "NOT_EXPR",
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 78 1`] = `
[
  "SELECT bool 't' = bool 'f' AS false",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "false",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 23,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 18,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 80 1`] = `
[
  "SELECT bool 't' <> bool 'f' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 24,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 19,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 82 1`] = `
[
  "SELECT bool 't' > bool 'f' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 23,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 18,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 84 1`] = `
[
  "SELECT bool 't' >= bool 'f' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": ">=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 24,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 19,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 86 1`] = `
[
  "SELECT bool 'f' < bool 't' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 23,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 18,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 88 1`] = `
[
  "SELECT bool 'f' <= bool 't' AS true",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 12,
                              "sval": {
                                "sval": "f",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 7,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 16,
                      "name": [
                        {
                          "String": {
                            "sval": "<=",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 24,
                              "sval": {
                                "sval": "t",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 19,
                            "names": [
                              {
                                "String": {
                                  "sval": "bool",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 91 1`] = `
[
  "SELECT 'TrUe'::text::boolean AS true, 'fAlse'::text::boolean AS false",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "TrUe",
                              },
                            },
                          },
                          "location": 13,
                          "typeName": {
                            "location": 15,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 19,
                      "typeName": {
                        "location": 21,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "bool",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 38,
                  "name": "false",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 38,
                              "sval": {
                                "sval": "fAlse",
                              },
                            },
                          },
                          "location": 45,
                          "typeName": {
                            "location": 47,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 51,
                      "typeName": {
                        "location": 53,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "bool",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 97 1`] = `
[
  "            -- error

CREATE TABLE BOOLTBL1 (f1 bool)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 35,
              "relname": "booltbl1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 48,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 101 1`] = `
[
  "INSERT INTO BOOLTBL1 (f1) VALUES (bool 't')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 22,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "booltbl1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 39,
                                "sval": {
                                  "sval": "t",
                                },
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": 34,
                              "names": [
                                {
                                  "String": {
                                    "sval": "bool",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 109 1`] = `
[
  "SELECT BOOLTBL1.* FROM BOOLTBL1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "booltbl1",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 121 1`] = `
[
  "SELECT BOOLTBL1.*
   FROM BOOLTBL1
   WHERE booleq(bool 'false', f1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "booltbl1",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "FuncCall": {
                "args": [
                  {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 56,
                          "sval": {
                            "sval": "false",
                          },
                        },
                      },
                      "location": -1,
                      "typeName": {
                        "location": 51,
                        "names": [
                          {
                            "String": {
                              "sval": "bool",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 65,
                    },
                  },
                ],
                "funcformat": "COERCE_EXPLICIT_CALL",
                "funcname": [
                  {
                    "String": {
                      "sval": "booleq",
                    },
                  },
                ],
                "location": 44,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 127 1`] = `
[
  "SELECT BOOLTBL1.*
   FROM BOOLTBL1
   WHERE f1 = bool 'false'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "booltbl1",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 44,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 54,
                        "sval": {
                          "sval": "false",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 49,
                      "names": [
                        {
                          "String": {
                            "sval": "bool",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 134 1`] = `
[
  "INSERT INTO BOOLTBL2 (f1) VALUES (bool 'f')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 22,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "booltbl2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 39,
                                "sval": {
                                  "sval": "f",
                                },
                              },
                            },
                            "location": -1,
                            "typeName": {
                              "location": 34,
                              "names": [
                                {
                                  "String": {
                                    "sval": "bool",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 148 1`] = `
[
  "SELECT BOOLTBL2.* FROM BOOLTBL2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "booltbl2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "booltbl2",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 181 1`] = `
[
  "SELECT f1
   FROM BOOLTBL1
   WHERE f1 IS NOT FALSE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_NOT_FALSE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 185 1`] = `
[
  "SELECT f1
   FROM BOOLTBL1
   WHERE f1 IS FALSE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_FALSE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 189 1`] = `
[
  "SELECT f1
   FROM BOOLTBL1
   WHERE f1 IS NOT TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_NOT_TRUE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 193 1`] = `
[
  "SELECT f1
   FROM BOOLTBL2
   WHERE f1 IS TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_TRUE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 197 1`] = `
[
  "SELECT f1
   FROM BOOLTBL2
   WHERE f1 IS NOT FALSE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_NOT_FALSE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 201 1`] = `
[
  "SELECT f1
   FROM BOOLTBL2
   WHERE f1 IS FALSE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_FALSE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 205 1`] = `
[
  "SELECT f1
   FROM BOOLTBL2
   WHERE f1 IS NOT TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 18,
                  "relname": "booltbl2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BooleanTest": {
                "arg": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "booltesttype": "IS_NOT_TRUE",
                "location": 39,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 212 1`] = `
[
  "CREATE TABLE BOOLTBL3 (d text, b bool, o int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "booltbl3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "d",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "o",
                  "is_local": true,
                  "location": 39,
                  "typeName": {
                    "location": 41,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 217 1`] = `
[
  "SELECT
    d,
    b IS TRUE AS istrue,
    b IS NOT TRUE AS isnottrue,
    b IS FALSE AS isfalse,
    b IS NOT FALSE AS isnotfalse,
    b IS UNKNOWN AS isunknown,
    b IS NOT UNKNOWN AS isnotunknown
FROM booltbl3 ORDER BY o",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 205,
                  "relname": "booltbl3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "o",
                          },
                        },
                      ],
                      "location": 223,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 11,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "d",
                          },
                        },
                      ],
                      "location": 11,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 18,
                  "name": "istrue",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 18,
                        },
                      },
                      "booltesttype": "IS_TRUE",
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 43,
                  "name": "isnottrue",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 43,
                        },
                      },
                      "booltesttype": "IS_NOT_TRUE",
                      "location": 45,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 75,
                  "name": "isfalse",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 75,
                        },
                      },
                      "booltesttype": "IS_FALSE",
                      "location": 77,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 102,
                  "name": "isnotfalse",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 102,
                        },
                      },
                      "booltesttype": "IS_NOT_FALSE",
                      "location": 104,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 136,
                  "name": "isunknown",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 136,
                        },
                      },
                      "booltesttype": "IS_UNKNOWN",
                      "location": 138,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 167,
                  "name": "isnotunknown",
                  "val": {
                    "BooleanTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 167,
                        },
                      },
                      "booltesttype": "IS_NOT_UNKNOWN",
                      "location": 169,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 231 1`] = `
[
  "CREATE TABLE booltbl4(isfalse bool, istrue bool, isnul bool)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "booltbl4",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "isfalse",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "istrue",
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "isnul",
                  "is_local": true,
                  "location": 49,
                  "typeName": {
                    "location": 55,
                    "names": [
                      {
                        "String": {
                          "sval": "bool",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 237 1`] = `
[
  "SELECT istrue AND isnul AND istrue FROM booltbl4",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 40,
                  "relname": "booltbl4",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "istrue",
                                },
                              },
                            ],
                            "location": 7,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "isnul",
                                },
                              },
                            ],
                            "location": 18,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "istrue",
                                },
                              },
                            ],
                            "location": 28,
                          },
                        },
                      ],
                      "boolop": "AND_EXPR",
                      "location": 14,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 246 1`] = `
[
  "SELECT isfalse OR isnul OR isfalse FROM booltbl4",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 40,
                  "relname": "booltbl4",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "isfalse",
                                },
                              },
                            ],
                            "location": 7,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "isnul",
                                },
                              },
                            ],
                            "location": 18,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "isfalse",
                                },
                              },
                            ],
                            "location": 27,
                          },
                        },
                      ],
                      "boolop": "OR_EXPR",
                      "location": 15,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 263 1`] = `
[
  "DROP TABLE  BOOLTBL2",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "booltbl2",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 265 1`] = `
[
  "DROP TABLE  BOOLTBL3",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "booltbl3",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`boolean.sql > line 267 1`] = `
[
  "DROP TABLE  BOOLTBL4",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "booltbl4",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
